<resources>
    <string name="app_name">Flower</string>
    <string name="add_top">Add top</string>
    <string name="add_bottom">Add Bottom</string>
    <string name="add_flower">Add Flower</string>
    <string name="remove_top">Remove top</string>
    <string name="remove_bottom">Remove bottom</string>
    <string name="url_image">URL Image</string>
    <string name="name">Name</string>
    <string name="add">ADD</string>
    <string name="price">Price</string>
</resources>
