<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/add_flower"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/imageUrl"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/url_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/editFlowerName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/imageUrl"
        app:layout_constraintStart_toStartOf="@+id/imageUrl"
        app:layout_constraintTop_toBottomOf="@+id/imageUrl" />


    <EditText
        android:id="@+id/editFlowerPrice"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/price"
        app:layout_constraintEnd_toEndOf="@+id/editFlowerName"
        app:layout_constraintStart_toStartOf="@+id/editFlowerName"
        app:layout_constraintTop_toBottomOf="@+id/editFlowerName" />

    <Button
        android:id="@+id/addFlowerToList"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>